Fixing some tests.